--- a/SmartAgricultureAPI/appsettings.json
+++ b/SmartAgricultureAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=ApplicationSystemDB;Trusted_Connection=True;"
+  }
 }
