--- a/SmartAgricultureAPI/appsettings.json
+++ b/SmartAgricultureAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ApplicationSystemDB;Trusted_Connection=True;"
+    "DefaultConnection": "Server=.;Database=PlantDB;Trusted_Connection=True;"
   }
 }
